src/css/magicssian_draft.css
/* ... */
/*! * Notification */
.notification {
  position: relative;
  z-index: 10001;
  display: none;
  width: 100%;
  height: auto;
  padding: var(--rhytm-unit);
  /*cursor: pointer;*/
  border: 1px solid var(--text-color);
  background-color: var(--neutral-color-lighter);
  border-radius: var(--rounded);
}
.notification:not(:empty) {
  display: block;
}
.check-notification:checked + .notification {
  display: none;
}
.notification.slide, 
.notification.fade {
  position: fixed;
  width: 98vw;
  top: 1vw;
  left: 1vw;
  transition: all .4s ease-out;
}
.check-notification.slide:checked + .notification.slide {
  /* Overrides default behavior display:none; */
  display: block;
  top: -25vw;
}
.notification.fade {
  opacity: 1;
}
.check-notification.fade:checked + .notification.fade {
  /* Overrides default behavior display:none; */
  display: block;
  opacity: 0;
  /* Prevent element to responde to click events */
  visibility: hidden;
}
.notification label {
  cursor: pointer;
}
.information {
  color: var(--information-color);
  border-color: var(--information-color);
  background-color: var(--information-color-lighter);
}
.success {
  color: var(--success-color);
  border-color: var(--success-color);
  background-color: var(--success-color-lighter);
}
.warning {
  color: var(--warning-color);
  border-color: var(--warning-color);
  background-color: var(--warning-color-lighter);
}
.error {
  color: var(--error-color);
  border-color: var(--error-color);
  background-color: var(--error-color-lighter);
}

/*! * Navigation */
.navigation .menu {
  transition: all .4s ease 0s;
}
.navigation label {
  position: relative;
  z-index: 9999;
  width: calc(2 * var(--rhytm-unit));
  height: calc(2 * var(--rhytm-unit));
  cursor: pointer;
  display: none;
}
/* Pure css hamburger "everybody hates me" icon */
.navigation label div, 
.navigation label div:before,
.navigation label div:after {  
  position: absolute;
  display: block;
  height: 6px;
  width: 32px;
  top: 12px;
  left: 0;
  right: 0;
  margin-left: auto;
  margin-right: auto;
  background-color: var(--complementary-color-1);
  border-radius: calc(.5 * var(--rounded));
  content: '';
  transition: all .4s ease 0s;
}
.navigation label div:before {
  top: -12px;
}
.navigation label div:after {
  top: 12px; 
}
.navigation label:hover div, 
.navigation label:hover div:before,
.navigation label:hover div:after {
  background-color: var(--complementary-color-1-darker);
}
/* navigation toggle default */
.navigation [type=checkbox]:checked + label div:before,
.navigation [type=checkbox]:checked + label div:after {
  opacity: 0;
}
.navigation [type=checkbox]:checked + label + .menu {
  display: block;
}
.navigation.slide-l [type=checkbox]:checked + label + .menu {
  left: 0;
}
.navigation.slide-r [type=checkbox]:checked + label + .menu {
  right: 0;
}
@media (max-width: 780px) {
  .navigation label {
    display: block;
  }
  .navigation .menu {
    display: none;
    background: #fff;
  }
  /* Slide left/right navigation */
  .navigation.slide-l .menu, 
  .navigation.slide-r .menu {
    display: block;
    position: fixed;
    z-index: 9998;
    top: 0;
    height: 100vh;
    width: 80vw;
    padding: var(--rhytm-unit);
  }
  .navigation.slide-l .menu {
    left: -80vw;
    padding-left: calc(2 * var(--rhytm-unit));
  }
  .navigation.slide-r .menu {
    right: -80vw;
    padding-right: calc(2 * var(--rhytm-unit));
  }
}

/*! * Dropdown navigation */
.dropdown {
}
.dropdown li {
}
.dropdown ul {
  display: none;
}
.dropdown li:hover > ul {
  display: inherit;
}
.dropdown.inline, 
.dropdown.inline > li {
  display: inline-block;
}
.dropdown.inline ul {
  position: absolute;
  left: 0;
  top: 10px;
  width: max-content;
}
.dropdown.inline li:hover > ul {
  display: inline-block;
}

/*! * Horizontal scroll container */
.scroll-h {
  position: relative;
  max-width: 100%;
  overflow: hidden;
}
.scroll-h:after {
  display: inline-block;
  content: '';
  width: var(--rhytm-unit);
  height: var(--rhytm-unit);
  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='10' height='20' viewBox='0 -3 10 20'%3E%3Cpolygon points='8 7 2 3 2 11 ' fill='%231A1A1A'/%3E%3C/svg%3E");
  background-position: center;
  background-repeat: no-repeat;
  right: 0;
  top: 0;
  position: absolute;
}
.scroll-h .content {
  max-width: calc(100% - 2 * var(--rhytm-unit));
  padding-bottom: var(--rhytm-unit);
  overflow-y: hidden;
  overflow-x: scroll;
  white-space: nowrap;
}

/*! * Collection */
.collection {
  min-height: 280px;
  border: 1px solid var(--neutral-color);
  border-radius: var(--rounded);
}
.collection .heading {
  margin: 0;
  padding: calc(.5 * var(--rhytm-unit));
  background: var(--neutral-color);
  line-height: calc(2 * var(--rhytm-unit));
}
.collection .content {
  padding: var(--rhytm-unit);
}
.collection .content > *:after {
  content: '\A';
  white-space: pre;
}
.collection .content > *:last-child:after {
  content: '';
}
.collection .heading > *, 
.collection .content > * {
  margin: 0;
}

/*! * Collapse container */
.collapse {
  border: 1px solid var(--neutral-color);
  border-radius: var(--rounded);
}
.collapse .heading {
  position: relative;
  margin: 0;
  padding: calc(.5 * var(--rhytm-unit));
  line-height: calc(2 * var(--rhytm-unit) - 2px);
}
.collapse .heading:after {
  position: absolute;
  content: '';
  display: block;
  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='10' height='20' viewBox='0 -3 10 20'%3E%3Cpolygon points='8 7 2 3 2 11 ' fill='%231A1A1A'/%3E%3C/svg%3E");
  width: 10px;
  height: 20px;
  right: calc(.5 * var(--rhytm-unit));
  top: 20px;
  background-repeat: no-repeat;
  background-position: center;
  transform: rotate(90deg);
}
.collapse .content {
  height: 0;
  margin: 0;
  padding: 0 var(--rhytm-unit);
  overflow: hidden;
  transition: all .4s ease-out;
}
.collapse > [type=checkbox]:checked + label .heading:after {
  transform: rotate(-90deg);
}
/* ... */

